@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>python</herd>
-	<maintainer>
-		<email>harold@alum.mit.edu</email>
-		<name>Harold Naparst</name>
-		<description>Active Maintainer, Assign bugs</description>
-	</maintainer>
-	<upstream>
-		<remote-id type="pypi">pysqlcipher</remote-id>
-	</upstream>
+  <herd>python</herd>
+  <herd>proxy-maintainers</herd>
+  <maintainer>
+    <email>harold@alum.mit.edu</email>
+    <name>Harold Naparst</name>
+  </maintainer>
 </pkgmetadata>
