@@ -4,17 +4,16 @@
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_7,3_3,3_4} )
+PYTHON_COMPAT=( python2_7 )
 inherit distutils-r1
 
 DESCRIPTION="Bindings for the scrypt key derivation function library"
 HOMEPAGE="http://bitbucket.org/mhallin/py-scrypt"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="BSD-2"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
 IUSE=""
+KEYWORDS="~amd64 ~x86"
+LICENSE=BSD-2
+SLOT=0
+SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
 
